ci: add Newman API tests to GitHub Actions workflow

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,3 +27,7 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report/
+      - name: Install Newman
+        run: npm install -g newman
+      - name: Run API tests with Newman
+        run: newman run tests/jsonplaceholder.postman_collection.json
